--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,15 +7,70 @@
   padding: 0;
 }
 
-body {
+/* body {
   background-color: #383838;
   
-}
+} */
+
 
 section {
   max-width: 1440px;
   margin: 0 auto;
   padding: 20px 80px 10px;
+}
+
+.nav--toggler {
+  display: flex;
+  align-items: center;
+}
+
+.nav--toggler-slider {
+  width: 28px;
+  height: 15px;
+  background-color: #2b283a;
+  border-radius: 2rem;
+  margin-inline: 7px;
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid black;
+  box-sizing: content-box;
+}
+
+
+.nav.dark .nav--toggler-slider {
+  border-color: white;
+  background-color: #f5f5f5;
+  justify-content: flex-end;
+}
+
+.nav--toggler-circle {
+  height: 15px;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 3px #2b283a;
+}
+
+.nav.dark .nav--toggler-circle {
+  background-color: black;
+}
+
+.nav--toggler-light {
+  color: #2b283a;
+}
+
+.nav.dark .nav--toggler-light {
+  color: #918e9b;
+}
+
+.nav--toggler-dark {
+  color: #d5d4d8;
+}
+
+.nav.dark .nav--toggler-dark {
+  color: #fff;
 }
 
 
@@ -48,10 +103,10 @@ section {
   width: 100%;
   max-width: 640px;
   position: fixed;
-  z-index: 0;
+  z-index: 20;
   top: 0%;
   right: 0%;
-  background-color: #2b2b2b;
+  /* background-color: #2b2b2b; */
   height: 100%;
   overflow-x: hidden;
   transition: 0.5s ease-in-out;
